@@ -142,6 +142,7 @@ public:
   void setGradientBackgroud(bool b);
   void setGradientBackgroudColor( const SbColor& fromColor, const SbColor& toColor );
   void setEnabledFPSCounter(bool b);
+  void stopSpinning();
 
 protected:
   unsigned long             currMod;
